# mesa

./: configure.ac
docs/: features.txt
src/: Makefile.am
src/broadcom/: Makefile.am  Makefile.sources  Makefile.vc5.am
src/broadcom/cle/: gen_pack_header.py  v3d_packet_v33.xml  vc5_packet.h
src/broadcom/clif/: clif_dump.c  clif_dump.h
src/broadcom/include/: v3d_chip.h
src/broadcom/nir/: nir_to_qir.c  qir.c  qir_live_variables.c  qir_lower_uniforms.c  qir_opt_copy_propagate.c  qir_opt_dead_code.c  qir_register_allocate.c  qir_to_qpu.c  vc5_compiler.c  vc5_compiler.h  vc5_nir_lower_io.c
src/broadcom/qpu/: qpu_instr.c  qpu_instr.h  qpu_pack.c  vc5_qpu_defines.h  vc5_qpu_disasm.c  vc5_qpu_disasm.h  vc5_qpu_validate.c
src/broadcom/qpu/tests/: .gitignore  vc5_qpu_disasm.c
src/compiler/: Makefile.sources  shader_enums.h
src/compiler/nir/: nir.h
src/gallium/: Makefile.am
src/gallium/auxiliary/pipe-loader/: pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h
src/gallium/auxiliary/util/: u_format.csv  u_mm.c
src/gallium/drivers/svga/: svga_format.c
src/gallium/drivers/vc4/: vc4_program.c  vc4_resource.c  vc4_screen.c  vc4_simulator.c  vc4_tiling.h  vc4_tiling_lt.c  vc4_uniforms.c
src/gallium/drivers/vc5/: Automake.inc  Makefile.am  vc5_bufmgr.c  vc5_cl.c  vc5_cl.h  vc5_context.c  vc5_context.h  vc5_draw.c  vc5_drm.h  vc5_emit.c  vc5_formats.c  vc5_job.c  vc5_program.c  vc5_rcl.c  vc5_resource.c  vc5_screen.c  vc5_screen.h  vc5_simulator.c  vc5_state.c  vc5_tiling.c  vc5_uniforms.c
src/gallium/include/pipe/: p_format.h
src/intel/vulkan/: anv_private.h
src/mesa/drivers/dri/i965/: intel_extensions.c
src/mesa/main/: extensions_table.h  formats.c  formats.h  glformats.c  mtypes.h  texformat.c  teximage.c
src/mesa/state_tracker/: st_extensions.c  st_format.c
src/util/: u_vector.c
